# globeco-script-runner

./: Dockerfile  README.md  build.sh  initialize.py  pyproject.toml  runner.py
files/: tickers.json
k8s/: job.yaml  run.sh
