[project]
name = "globeco-script-runner"
version = "0.1.0"
description = "Generic Python runner for Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
